--- a/libs/ctf/Cargo.toml
+++ b/libs/ctf/Cargo.toml
@@ -11,5 +11,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base = { path = "../base" }
 bitlab = "*"
 log = "*"
