--- a/libs/ctf/Cargo.toml
+++ b/libs/ctf/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-base = { path = "../base" }
-alloc_data = { path = "../alloc_data" }
+base = { path = "../base", features = ["server"] }
+alloc_data = { path = "../alloc_data", features = ["server"] }
 
 log = "*"
